# gap-wasm

./: gap.js  gap.wasm  startup_manifest.json
assets/doc/: make_doc
assets/pkg/aclib/: PackageInfo.g  read.g
assets/pkg/alco/: CHANGES.md  PackageInfo.g  README.md  init.g  makedoc.g  read.g
assets/pkg/anupq/: Makefile.in  aclocal.m4  configure  configure.ac
assets/pkg/atlasrep/: PackageInfo.g  README.md  atlasprm.json  atlasprm_SHA.json  init.g  makedocrel.g  prerequisites.sh  read.g
assets/pkg/browse/: CHANGES  Makefile.in  PackageInfo.g  README  configure  init.g  makedocrel.g  read.g
assets/pkg/cap/: makedoc.g  makedoc_with_overfull_hbox_warnings.g
assets/pkg/caratinterface/: Changelog  INSTALL  Makefile  PackageInfo.g  configure  init.g  read.g
assets/pkg/cddinterface/: configure
assets/pkg/classicpres/: PackageInfo.g  README.md  init.g  read.g
assets/pkg/corefreesub/: LICENSE  maketest.g
assets/pkg/crisp/: LICENSE.txt  PackageInfo.g  README.txt
assets/pkg/ctbllib/: PackageInfo.g  (+4 more)
assets/pkg/curlinterface/: CHANGES  LICENSE  Makefile.in  PackageInfo.g  README.md  configure  configure.ac  init.g  makedoc.g  read.g
assets/pkg/curlinterface/doc/: _AutoDocMainFile.xml  _Chapter_Overview.xml  _entities.xml  chap0.html  chap0.txt  chap0_mj.html  chap1.html  chap1.txt  chap1_mj.html  chapInd.html  chapInd.txt  chapInd_mj.html  curlInterface.xml  manual.lab  manual.six  title.xml
assets/pkg/curlinterface/gap/: curl.gd  curl.gi
assets/pkg/curlinterface/src/: curl.c  pkgconfig.h.in
assets/pkg/curlinterface/tst/: basic.tst  errors.tst  testall.g
(+2917 files in other folders)
